--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,12 @@ documentation = "https://github.com/lexiq-legal/pydantic_schemaorg"
 keywords = ["schema.org", "pydantic"]
 
 [tool.poetry.dependencies]
-pydantic = "^1.8.2"
+python = "^3.8"
+pydantic = "^1.10.2"
 
-[tool.poetry.dev-dependencies]
-black = { version = "^21.11b1", python = "^3.8" }
+[tool.poetry.group.dev.dependencies]
+black = { version = "^22.12", python = "^3.8" }
+jinja2 = "^3.1.2"
 
 [build-system]
 requires = [
